# TMAU-2025

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml  check_duplication.yml
tasks/as06615/task_01/doc/: readme.md
tasks/as06615/task_01/src/: CMakeLists.txt  main.cpp  trajectory.csv
tasks/task_01/: readme.md
tasks/task_02/: readme.md
tasks/task_07/: readme.md
trunk/as006505/task_01/doc/: readme.md
trunk/as006505/task_01/src/: CMakeLists.txt
trunk/as06501/task_01/doc/: readme.md
trunk/as06501/task_01/src/: CMakeLists.txt  laba1.cpp
trunk/as06502/task_01/doc/: readme.md
trunk/as06502/task_01/src/: CMakeLists.txt  main.cpp
trunk/as06502/task_02/: .gitignore
trunk/as06502/task_02/doc/: readme.md
trunk/as06502/task_02/src/: CMakeLists.txt  main.cpp  temperature_model.cpp  temperature_model.h
trunk/as06502/task_02/test/: test_temperature_model.cpp
trunk/as06503/: ФИО.txt
trunk/as06503/task_01/doc/: readme.md
trunk/as06503/task_01/src/: CMakeLists.txt  laba1.cpp
trunk/as06503/task_02/doc/: readme.md
trunk/as06503/task_02/src/: CMakeLists.txt  func.cpp  func.h  main.cpp
trunk/as06503/task_02/test/: tests.cpp
trunk/as06508/task_01/doc/: readme.md
trunk/as06508/task_01/src/: CMakeLists.txt  laba1.cpp
trunk/as06509/task_01/doc/: readme.md
trunk/as06509/task_01/src/: CMakeLists.txt  LAB1.cpp
trunk/as06509/task_02/doc/: readme.md
trunk/as06509/task_02/src/: CMakeLists.txt  main.cpp  model.cpp  model.h
trunk/as06509/task_02/test/: test_model.cpp
trunk/as06512/task_01/doc/: readme.md
trunk/as06512/task_01/src/: CMakeLists.txt  timay01.cpp
trunk/as06512/task_02/doc/: readme.md
trunk/as06512/task_02/src/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
trunk/as06512/task_02/test/: tests.cpp
trunk/as06514/task_02/doc/: readme.md
trunk/as06514/task_02/src/: CMakeLists.txt  function.cpp  function.h
trunk/as06514/task_02/test/: test.cpp
trunk/as06516/task_01/doc/: readme.md
trunk/as06516/task_01/src/: CMakeLists.txt  Source.cpp  task1.cpp  СMakeLists.txt
trunk/as06516/task_02/doc/: readme.md
trunk/as06516/task_02/src/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
trunk/as06516/task_02/test/: tests.cpp
trunk/as06518/task_01/doc/: readme.md
trunk/as06518/task_01/src/: CMakeLists.txt  tmau1.cpp
trunk/as06519/task_01/doc/: README.md
trunk/as06519/task_01/src/: CMakeLists.txt  main.cpp
trunk/as06523/task_01/doc/: README.md
trunk/as06523/task_01/src/: CMakeLists.txt  main.cpp
trunk/as06601/task_01/doc/: README.md
trunk/as06601/task_01/src/: CMakeLists.txt  main.cpp
trunk/as06605/task1/doc/: readme.md
trunk/as06605/task1/src/: CMakeLists.txt  timau.cpp
trunk/as06605/task_02/doc/: readme.md
trunk/as06605/task_02/src/: CMakeLists.txt  function.cpp  function.h  main.cpp
trunk/as06605/task_02/test/: tests.cpp
trunk/as06606/task_01/doc/: README.md
trunk/as06606/task_01/src/: CMakeLists.txt  main.cpp
trunk/as06606/task_02/doc/: README.md
trunk/as06606/task_02/src/: CMakeLists.txt  func.cpp  func.h  main.cpp
trunk/as06606/task_02/test/: test.cpp
trunk/as06609/task_01/doc/: readme.md
trunk/as06609/task_01/src/: CMakeLists.txt  lab1tmau.cpp
trunk/as06609/task_02/doc/: readme.md
trunk/as06609/task_02/src/: CMakeLists.txt  func.cpp  func.h  main.cpp
trunk/as06609/task_02/test/: tests.cpp
trunk/as06611/task_01/doc/: README.md
trunk/as06611/task_01/src/: CMakeLists.txt  tmau.cpp
trunk/as06615/task_01/doc/: readme.md
trunk/as06615/task_01/src/: CMakeLists.txt  main.cpp
trunk/as06615/task_02/doc/: README.md
trunk/as06615/task_02/src/: CMakeLists.txt  main.cpp  model.cpp  model.h
trunk/as06615/task_02/test/: test_model.cpp
trunk/as06616/task1/doc/: readme.md
trunk/as06616/task1/src/: CMakeLists.txt  ConsoleApplication1.cpp
trunk/as06616/task2/doc/: readme.md
trunk/as06616/task2/src/: CMakeLists.txt  func.cpp  func.h  main.cpp
trunk/as06616/task2/test/: test.cpp
trunk/as06620/task_01/doc/: readme.md
trunk/as06620/task_01/src/: CMakeLists.txt  tmau1.cpp
trunk/as06622/task_01/doc/: readme.md
trunk/as06622/task_01/src/: CMakeLists.txt  laba1tmau.cpp
trunk/as06622/task_02/doc/: readme.md
trunk/as06622/task_02/src/: CMakeLists.txt  func.cpp  func.h  main.cpp
trunk/as06622/task_02/test/: tests.cpp
trunk/as06623/task_01/doc/: readme.md
trunk/as06623/task_01/src/: CMakeLists.txt  tmau1.cpp
trunk/as06623/task_02/doc/: readme.md
trunk/as06623/task_02/src/: CMakeLists.txt  main.cpp  model.cpp  model.h
trunk/as06623/task_02/test/: model_tests.cpp
trunk/as06624/task_01/doc/: README.md
trunk/as06624/task_01/src/: CMakeLists.txt  tmau.cpp
trunk/as06624/task_02/doc/: README.md
trunk/as06624/task_02/src/: CMakeLists.txt  main.cpp  model.cpp  model.h
trunk/as06624/task_02/test/: test_model.cpp
trunk/as6513/task_01/doc/: readme.md
trunk/as6513/task_01/src/: CMakeLists.txt  as65013.cpp
trunk/as6513/task_02/: CMakeLists.txt  readme.md
trunk/as6513/task_02/src/: CMakeLists.txt  main.cpp  models.cpp  models.h
trunk/as6513/task_02/test/: CMakeLists.txt  test_models.cpp
