cmake_minimum_required(VERSION 3.5)
project(task_02)

set(CMAKE_CXX_STANDARD 17)

add_executable(task_02_main
    main.cpp
    func.cpp
)

include(FetchContent)
FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/refs/tags/release-1.12.1.zip
    DOWNLOAD_EXTRACT_TIMESTAMP TRUE
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(task_02_tests
    ../test/test.cpp
    func.cpp
)

target_link_libraries(task_02_tests
    GTest::gtest
)

target_include_directories(task_02_tests PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
)

include(GoogleTest)
gtest_discover_tests(task_02_tests)